| Summary: | ASTERISK-24662: [patch] column and row headers for Signed Linear format variants in output of 'core show translation' are ambiguous | ||||
| Reporter: | Rusty Newton (rnewton) | Labels: | patch | ||
| Date Opened: | 2015-01-05 08:11:32.000-0600 | Date Closed: | 2017-11-28 12:14:03.000-0600 | ||
| Priority: | Minor | Regression? | Yes | ||
| Status: | Closed/Complete | Components: | |||
| Versions: | SVN 13.1.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) translation_table.patch | |||
| Description: | In Asterisk 11 we had row and column headers as follows:
{noformat} <snip> slin12 slin24 slin32 slin44 <snip> {noformat} In Asterisk 13 we have: {noformat} <snip> slin slin slin slin <snip> {noformat} Not very useful.. you can't tell which slin is which in the output of 'core show translation' in 13. We should fix it! | ||||
| Comments: | By: Friendly Automation (friendly-automation) 2017-11-28 12:14:04.416-0600 Change 7365 merged by Jenkins2: translate: Show sample rate for silk, speex, and slin in translation table. [https://gerrit.asterisk.org/7365|https://gerrit.asterisk.org/7365] By: Friendly Automation (friendly-automation) 2017-11-28 12:25:57.461-0600 Change 7366 merged by Jenkins2: translate: Show sample rate for silk, speex, and slin in translation table. [https://gerrit.asterisk.org/7366|https://gerrit.asterisk.org/7366] By: Friendly Automation (friendly-automation) 2017-11-28 12:38:48.368-0600 Change 7364 merged by Joshua Colp: translate: Show sample rate for silk, speex, and slin in translation table. [https://gerrit.asterisk.org/7364|https://gerrit.asterisk.org/7364] | ||||