translate: Show sample rate for silk, speex, and slin in translation table.

ASTERISK-24662

Change-Id: I3822956984292c99c48bca8e97807e498ccc0e88